Add modern LuCI theme.

--- a/themes/luci-theme-modern/Makefile
+++ b/themes/luci-theme-modern/Makefile
@@ -9,6 +9,16 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=Modern Professional Theme
 LUCI_DEPENDS:=+luci-base
 
+PKG_LICENSE:=Apache-2.0
+
+define Package/luci-theme-modern/postrm
+#!/bin/sh
+[ -n "$${IPKG_INSTROOT}" ] || {
+	uci -q delete luci.themes.Modern
+	uci commit luci
+}
+endef
+
 include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
